--- a/style.css
+++ b/style.css
@@ -3,3 +3,12 @@
     margin:0;
     padding: 0;
 }
+body{
+    line-height: 1.5;
+}
+
+.container{
+    max-width: 1000px;
+    margin: 0 auto;
+    padding: 0 30px;
+}
