--- a/style.css
+++ b/style.css
@@ -1,7 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap');
+
 *{
     box-sizing: border-box;
     margin:0;
     padding: 0;
+    font-family: 'Roboto', sans-serif;
 }
 body{
     line-height: 1.5;
@@ -19,10 +22,25 @@ ul{
 
 .navbar{
     background: #1f2950;
-    color: #f9faf8;
     height: 50px;
 }
 
+.logo{
+    font-size: 24px;
+    color: #f9faf8;
+    font-weight: bold;
+}
+
+.navbar a {
+    color: #e5e7eb;
+    font-size: 18px;
+    text-decoration: none;
+    
+}
+
+.navbar.container{
+    display: flex;
+}
 
 .header{
     background-color: #1f2937;
