--- a/style.css
+++ b/style.css
@@ -15,31 +15,43 @@ ul{
 }
 
 .container{
-    max-width: 1000px;
+    max-width: 1500px;
     margin: 0 auto;
     padding: 0 30px;
 }
 
 .navbar{
     background: #1f2950;
-    height: 50px;
+    height: 70px;
 }
 
 .logo{
     font-size: 24px;
     color: #f9faf8;
-    font-weight: bold;
+    font-weight: 800;
 }
 
 .navbar a {
     color: #e5e7eb;
     font-size: 18px;
     text-decoration: none;
+    font-weight:bolder;
     
 }
 
-.navbar.container{
+.navbar .container{
     display: flex;
+    justify-content: space-between;
+    align-items:center;
+    height: 100%;
+}
+
+.navbar ul{
+    display: flex;
+}
+
+.navbar ul li{
+    margin-left: 20px;
 }
 
 .header{
@@ -48,5 +60,5 @@ ul{
 
 h1{
     color: #f9faf8;
-    font: 48px ;
+    font: 48px;
 }
