--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;400&family=Roboto:wght@100&display=swap');
 
 *{
     box-sizing: border-box;
@@ -21,25 +22,30 @@ ul{
 }
 
 .navbar{
-    background: #1f2950;
-    height: 70px;
+    background-color:rgb(55, 66, 82);
+    height: 50px;
 }
 
 .logo{
     font-size: 24px;
     color: #f9faf8;
-    font-weight: 800;
+    font-family: 'Oswald', sans-serif;
 }
 
 .navbar a {
     color: #e5e7eb;
     font-size: 18px;
     text-decoration: none;
-    font-weight:bolder;
-    
+    font-weight:800;
+}
+
+.navbar a:hover{
+    color:skyblue;
+    text-decoration: underline;
 }
 
 .navbar .container{
+    max-width: 1800px;
     display: flex;
     justify-content: space-between;
     align-items:center;
