--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ body{
     line-height: 1.5;
 }
 
+
 ul{
     list-style: none;
 }
@@ -60,6 +61,10 @@ ul{
     margin-left: 20px;
 }
 
+.header img{
+    width: 50%;
+    height: 350px;
+}
 .header{
     background-color: #1f2937;
 }
@@ -67,4 +72,5 @@ ul{
 h1{
     color: #f9faf8;
     font: 48px;
+    font-weight:800;
 }
