--- a/style.css
+++ b/style.css
@@ -62,15 +62,20 @@ ul{
 }
 
 .header img{
-    width: 50%;
+    width: 600px;
     height: 350px;
 }
 .header{
     background-color: #1f2937;
+    color: #e5e7eb;
+    font-size: 18px;
+    font-weight:bold;
+    min-height: 500px;
 }
 
 h1{
     color: #f9faf8;
-    font: 48px;
+    font-size: 48px;
     font-weight:800;
+    line-height: 1.5;
 }
