--- a/style.css
+++ b/style.css
@@ -1,11 +1,10 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;400&family=Roboto:wght@100&display=swap');
 
 *{
     box-sizing: border-box;
     margin:0;
     padding: 0;
-    font-family: 'Roboto', sans-serif;
+    font-family:'Oswald', sans-serif;
 }
 body{
     line-height: 1.5;
@@ -64,6 +63,10 @@ ul{
 .header img{
     width: 600px;
     height: 350px;
+    margin-top: 80px;
+    border-style: solid;
+    border: double silver 10px;
+    
 }
 .header{
     background-color: #1f2937;
@@ -78,4 +81,10 @@ h1{
     font-size: 48px;
     font-weight:800;
     line-height: 1.5;
+}
+
+.header .container{
+    display: flex;
+    justify-content:space-around;
+    align-items: center;
 }
