--- a/style.css
+++ b/style.css
@@ -109,3 +109,20 @@ h1{
     justify-content:space-around;
     align-items: center;
 }
+
+.boxes{
+    min-height: 400px;
+}
+
+h2{
+    font-size: 36px;
+    color: #1f2937;
+    padding-top: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
+
+.boxes .container{
+    display: flex;
+}
