--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ ul{
 }
 
 .container{
-    max-width: 1500px;
+    max-width: 1100px;
     margin: 0 auto;
     padding: 0 30px;
 }
@@ -117,12 +117,23 @@ h1{
 h2{
     font-size: 36px;
     color: #1f2937;
-    padding-top: 20px;
+    padding: 20px 20px;
     display: flex;
-    align-items: center;
-    justify-content: space-around;
+    justify-content:center;
+}
+
+.box img{
+    width: 350px;
+    height: 350px;
 }
 
 .boxes .container{
     display: flex;
+    align-items: center ;
+    justify-content: space-around;
+}
+
+
+.quote{
+    min-height: 400px;
 }
