--- a/style.css
+++ b/style.css
@@ -158,4 +158,25 @@ h2{
 
 .quote{
     min-height: 400px;
+    background-color: #e5e7eb;
+    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.quote .quote-main{
+    font-size: 36px;
+    font-style: italic;
+    font-weight: lighter;
+}
+
+.quote .quote-author{
+    font-weight: bold;
+    font-style: normal;
+    text-align: right;
+    letter-spacing: 1.5px;
+}
+.quote .quote-author::before{
+    content: "\2014";
 }
