--- a/style.css
+++ b/style.css
@@ -199,3 +199,20 @@ h4{
     font-weight: bold;
     letter-spacing: 1.2px;
 }
+
+.buttonAction{
+    background-color: #3882f6;
+    color: #f9faf8;
+    padding: 5px 40px;
+    border:solid 2px #f9faf8;
+    font-size: 15px;
+    border-radius: 20px;
+    transition-duration: 0.4s;
+    cursor: pointer;
+}
+
+.buttonAction:hover{
+    background-color: #2965c5;
+    color: #f9faf8;
+    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+}
