Add styling to footer
Add basic styling. Nothing much.

--- a/style.css
+++ b/style.css
@@ -216,3 +216,11 @@ h4{
     color: #f9faf8;
     box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
 }
+
+.footer{
+    display: flex;
+    padding: 30px 50px;
+    background-color: #1f2937;
+    color: #f9faf8;
+    letter-spacing: 2.5px;
+}
