--- a/style.css
+++ b/style.css
@@ -104,7 +104,8 @@ h1{
 
 .header .container{
     display: flex;
-    justify-content:space-around;
+    gap: 100px;
+    justify-content:space-evenly;
     align-items: center;
 }
 
