--- a/style.css
+++ b/style.css
@@ -47,7 +47,7 @@ ul{
     display: flex;
     justify-content: space-between;
     align-items:center;
-    height: 100%;
+    padding-top: 20px;
 }
 
 .navbar ul{
@@ -59,7 +59,7 @@ ul{
 }
 
 .header img{
-    width: 600px;
+    width: 100%;
     height: 350px;
     margin-top: 80px;
     border-style: solid;
