--- a/style.css
+++ b/style.css
@@ -43,7 +43,6 @@ ul{
 }
 
 .navbar .container{
-    max-width: 1800px;
     display: flex;
     justify-content: space-between;
     align-items:center;
@@ -71,7 +70,7 @@ ul{
     color: #e5e7eb;
     font-size: 18px;
     font-weight:bold;
-    min-height: 500px;
+    min-height: 200px;
 }
 
 .header .button{
@@ -227,9 +226,13 @@ h4{
 }
 
 @media(max-width: 768px){
+    .navbar .container{
+        flex-direction: column;
+        text-align: center;
+    }
+
     .header .container{
         flex-direction: column;
-        padding-top: 20px;
         text-align: center;
     }
 
