--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ ul{
 
 .navbar{
     background-color:#f9faf8;
-    height: 70px;
+    height:auto;
 }
 
 .logo{
@@ -43,10 +43,12 @@ ul{
 }
 
 .navbar .container{
+    max-width: 1800px;
     display: flex;
     justify-content: space-between;
     align-items:center;
     padding-top: 20px;
+    padding-bottom: 20px;
 }
 
 .navbar ul{
@@ -60,7 +62,7 @@ ul{
 .header img{
     width: 100%;
     height: 350px;
-    margin-top: 80px;
+    margin: 50px 50px;
     border-style: solid;
     border: double silver 10px;
     
@@ -70,7 +72,6 @@ ul{
     color: #e5e7eb;
     font-size: 18px;
     font-weight:bold;
-    min-height: 200px;
 }
 
 .header .button{
@@ -99,6 +100,7 @@ h1{
     font-size: 48px;
     letter-spacing: 7px;
     line-height: 1.5;
+    margin: 10px 10px;
 }
 
 .header .container{
