--- a/style.css
+++ b/style.css
@@ -28,6 +28,7 @@ ul{
 .logo{
     font-size: 24px;
     color: #1f2937;
+    padding: 10px 10px;
 }
 
 .navbar a {
@@ -62,7 +63,7 @@ ul{
 .header img{
     width: 100%;
     height: 350px;
-    margin: 50px 50px;
+    margin: 50px;
     border-style: solid;
     border: double silver 10px;
     
@@ -105,7 +106,6 @@ h1{
 
 .header .container{
     display: flex;
-    gap: 100px;
     justify-content:space-evenly;
     align-items: center;
 }
