--- a/loader.css
+++ b/loader.css
@@ -1,5 +1,27 @@
 @import url('https://fonts.googleapis.com/css2?family=Libre+Caslon+Text&family=Montserrat+Alternates&family=Oswald:wght@200;300;400&family=Roboto:wght@100&display=swap');
 
 #loader{
-    font-family: 'Montserrat Alternates', sans-serif !important;
+    font-family: 'Montserrat Alternates', sans-serif;
+    font-size: 50px;
+    color:#1f2937;
+}
+.loader_main::before{
+    content: '\2014';
+}
+.loader_main::after{
+    content: '\2014';
+}
+
+.loader_quote::after{
+    content: '\2026';
+    overflow: hidden;
+    vertical-align:text-bottom;
+    animation: dots steps(4, end) 2s infinite;
+    width: 0px;
+}
+@keyframes dots{
+    to{
+        width: 1.25em;
+    }
+
 }
