Add animation to dashes
Finally. The workaround was to make them white, and do
animation-direction: alternate

In this case they are "bouncing" or flashing, in other words - I did
what I wanted. Hell yeah!

--- a/loader.css
+++ b/loader.css
@@ -4,25 +4,34 @@
     font-family: 'Montserrat Alternates', sans-serif;
     font-size: 50px;
     color:#1f2937;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 .loader_main::before{
+    content: '\2014';
     display: inline;
     overflow: hidden;
     vertical-align:text-bottom;
-    content: '\2014';
-    animation: dash 2s infinite;
+    animation: dash 2s;
+    animation-iteration-count: infinite;
+    animation-direction: alternate;
+
 }
 .loader_main::after{
     content: '\2014';
-    animation: dash steps(4, end) 2s infinite;
+    animation: dash 2s;
+    animation-iteration-count: infinite;
+    animation-direction: alternate;
 }
 
 .loader_quote::after{
     content: '\2026';
     display: inline-block;
     overflow: hidden;
-    vertical-align:text-bottom;
-    animation: dots steps(6, end) 1s infinite;
+    vertical-align:bottom;
+    animation: dots 3s infinite;
+    padding-left: 5px;
     width: 0px;
 }
 @keyframes dots{
@@ -33,6 +42,6 @@
 
 @keyframes dash{
     to {
-        width: 1.25em;
+       color:white;
     }
 }
