--- a/loader.css
+++ b/loader.css
@@ -7,6 +7,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    padding-top: 200px;
 }
 .loader_main::before{
     content: '\2014';
