--- a/style.css
+++ b/style.css
@@ -76,6 +76,7 @@ ul{
     
 }
 .header{
+    height: auto;
     background-color: #1f2937;
     color: #e5e7eb;
     font-size: 18px;
@@ -115,6 +116,7 @@ h1{
     display: flex;
     justify-content:space-evenly;
     align-items: center;
+    padding-bottom: 20px;
 }
 
 .boxes{
@@ -163,7 +165,10 @@ h2{
 }
 
 .box p{
-    padding-top: 50px;
+    text-align: center;
+    padding-top: 30px;
+    padding-bottom: 30px;
+
 }
 
 .quote{
