--- a/style.css
+++ b/style.css
@@ -8,13 +8,13 @@
 body{
     line-height: 1.5;
 }
-
+/*
 .loaderWrap{
     opacity: 0;
     display: none;
     transition: opacity 2s ease-in;
 }
-
+*/
 ul{
     list-style: none;
 }
@@ -67,7 +67,7 @@ ul{
 }
 
 .header img{
-    width: 100%;
+    width: 500px;
     height: 350px;
     object-fit: cover;
     margin: 50px;
@@ -114,7 +114,6 @@ h1{
 
 .header .container{
     display: flex;
-    justify-content:space-evenly;
     align-items: center;
     padding-bottom: 20px;
 }
