Change size of header image
It was driving me nuts from very beginning. Not properly display on
mobile phone

--- a/style.css
+++ b/style.css
@@ -258,6 +258,11 @@ h4{
         text-align: center;
     }
 
+    .header img{
+        width: 350px;
+        height: 350px;
+    }
+
     .boxes .boxSection{
         flex-direction: column;
         text-align: center;
